adjust readme & race condition
